--- a/app/assets/stylesheets/_exchange_box.scss
+++ b/app/assets/stylesheets/_exchange_box.scss
@@ -1,6 +1,7 @@
 .exchange_box{
     .card{
       border: 0;
+      padding: 5px;
       .card-header{
         background-color: #878d99;
         border-radius: 0;
